# openapi/beanflow-v1-runtime.yaml
@@ -624,6 +624,10 @@ paths:
     $ref: "./beanflow-v1.yaml#/paths/~1operations~1brands~1{brandId}"
   /operations/stores/{storeId}/brand:
     $ref: "./beanflow-v1.yaml#/paths/~1operations~1stores~1{storeId}~1brand"
+  /regions:
+    $ref: "./beanflow-v1.yaml#/paths/~1regions"
+  /stores/{storeId}/region:
+    $ref: "./beanflow-v1.yaml#/paths/~1stores~1{storeId}~1region"
   /stores/{storeId}/settlements:
     $ref: "./beanflow-v1.yaml#/paths/~1stores~1{storeId}~1settlements"
   /stores/{storeId}/settlements/{settlementBatchId}/items:
